Add projects list endpoint
