# docs/openapi-project.yml
@@ -9,6 +9,28 @@ servers:
   - url: https://ingest.dev.dasch.swiss/info
     description: Development server
 paths:
+
+  /project:
+    get:
+      summary: Lists all projects containing assets
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  projects:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        shortcode:
+                          type: string
+                          description: The shortcode of the project.
+                          example: 000F
+
   /project/{shortcode}/import:
     post:
       summary: Imports assets into a project
