# src/main/scala/swiss/dasch/api/ListProjectsEndpoint.scala
@@ -1,0 +1,41 @@
+package swiss.dasch.api
+
+import swiss.dasch.domain.{ AssetService, ProjectShortcode }
+import zio.*
+import zio.http.Status
+import zio.http.codec.HttpCodec
+import zio.http.endpoint.Endpoint
+import zio.json.{ DeriveJsonEncoder, JsonEncoder }
+import zio.schema.codec.JsonCodec.JsonEncoder
+import zio.schema.{ DeriveSchema, Schema }
+object ListProjectsEndpoint {
+  final case class ProjectResponse(shortcode: String)
+  object ProjectResponse {
+    def make(shortcode: ProjectShortcode): ProjectResponse = ProjectResponse(shortcode.toString)
+
+    implicit val schema: Schema[ProjectResponse]           = DeriveSchema.gen[ProjectResponse]
+    implicit val jsonEncoder: JsonEncoder[ProjectResponse] = DeriveJsonEncoder.gen[ProjectResponse]
+  }
+
+  final case class ProjectsResponse(projects: Chunk[ProjectResponse])
+  object ProjectsResponse {
+    implicit val schema: Schema[ProjectsResponse]           = DeriveSchema.gen[ProjectsResponse]
+    implicit val jsonEncoder: JsonEncoder[ProjectsResponse] = DeriveJsonEncoder.gen[ProjectsResponse]
+  }
+
+  val listProjectsEndpoint = Endpoint
+    .get("project")
+    .out[ProjectsResponse]
+    .outError[InternalProblem](Status.InternalServerError)
+
+  val app = listProjectsEndpoint
+    .implement(_ =>
+      AssetService
+        .listAllProjects()
+        .mapBoth(
+          ApiProblem.internalError,
+          shortcodes => ProjectsResponse(shortcodes.map(ProjectResponse.make)),
+        )
+    )
+    .toApp
+}
